--- a/index.html
+++ b/index.html
@@ -232,35 +232,60 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Ipsum sed consequat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>About the Team</h2>
+							<p>Our team of five assembled for the 9 month MHCI Capstone project. We are all graduating in August 2018 from CMU's Master of Human-Computer Interaction program.</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Grace Guo</h3>
+                                    <p>Grace holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
+                                    <br>
+                                    <p>Post MHCI:
+                                    UX Designer
+                                    </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Zohaib Khan</h3>
+									<p>Born in California, raised in Pakistan, and having worked in Toronto, Canada, Zohaib has a lot of experience navigating unfamiliar territory.
+                                    Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
+                                    He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
+                                    <br>
+                                    <p>Post MHCI, Zohaib is aiming for a Product Manager or UX Designer role at a technology company or design consultancy.
+                                    </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Scott Leinweber</h3>
+									<p>Scott is a creative technologist exploring the digital-physical dialog of craftsmanship today.
+                                    Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
+                                    <br>
+                                    <p>Post-MHCI:
+                                    3D Interaction Designer
+                                    UX Designer
+                                    </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+									<h3>Aroon Mathai</h3>
+                                    <p>Aroon has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.</p>
+                                    <br>
+                                    <p>Post-MHCI:
+                                    Product Manager
+                                    UX Designer
+                                    </p>
+        						</section>
 								<section>
 									<span class="icon style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Xueting "Nika" Zhang</h3>
+									<p>Nika holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
+                                    <br>
+                                    <p>
+                                    Post MHCI:
+                                    Product designer
+                                    </p>
 								</section>
-								<section>
+								<!-- <section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Tempus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
@@ -294,7 +319,7 @@
 									<span class="icon style2 major fa-leaf"></span>
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
