adds tagline, bio formatting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Team Mastercard</h1>
-							<p class="major">blah blah blah blah blah</p>
+							<p class="major">The future of authentication in digital payments</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -240,9 +240,8 @@
 									<h3>Grace Guo</h3>
                                     <p>Grace holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
                                     <br>
-                                    <p>Post MHCI:
-                                    UX Designer
-                                    </p>
+                                    <p>Post MHCI:</p>
+                                    <p>UX Designer</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-save"></span>
@@ -251,7 +250,8 @@
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
                                     <br>
-                                    <p>Post MHCI, Zohaib is aiming for a Product Manager or UX Designer role at a technology company or design consultancy.
+                                    <p>Post MHCI:</p>
+                                    <p>Zohaib is aiming for a Product Manager or UX Designer role at a technology company or design consultancy.
                                     </p>
 								</section>
 								<section>
@@ -260,8 +260,8 @@
 									<p>Scott is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br>
-                                    <p>Post-MHCI:
-                                    3D Interaction Designer
+                                    <p>Post-MHCI:</p>
+                                    <p>3D Interaction Designer
                                     UX Designer
                                     </p>
 								</section>
@@ -270,8 +270,8 @@
 									<h3>Aroon Mathai</h3>
                                     <p>Aroon has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.</p>
                                     <br>
-                                    <p>Post-MHCI:
-                                    Product Manager
+                                    <p>Post-MHCI:</p>
+                                    <p>Product Manager
                                     UX Designer
                                     </p>
         						</section>
@@ -280,9 +280,8 @@
 									<h3>Xueting "Nika" Zhang</h3>
 									<p>Nika holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
                                     <br>
-                                    <p>
-                                    Post MHCI:
-                                    Product designer
+                                    <p>Post MHCI:</p>
+                                    <p>Product designer
                                     </p>
 								</section>
 								<!-- <section>
