Cleaning home page and fixing email

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<!--<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Weeknotes 2</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
@@ -56,10 +56,10 @@
 						<div class="image">
 							<img src="images/spotlight02.jpg" alt="" />
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<!--<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Weeknotes 3</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
@@ -70,16 +70,15 @@
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
-					</section>
+					</section>-->
 
 				<!-- Five -->
-					<section class="wrapper style1 align-center">
+					<!--<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Another Future Weeknotes</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 						</div>
 
-						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
@@ -227,16 +226,16 @@
 								</article>
 							</div>
 
-					</section>
+					</section>-->
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>About the Team</h2>
 							<p>Our team of five assembled for the 9 month MHCI Capstone project. We are all graduating in August 2018 from CMU's Master of Human-Computer Interaction program.</p>
-							<div class="items style1 medium onscroll-fade-in">
+							<div class="items style3 small onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-diamond"></span>
+									<span class="icon style1 major fa-diamond"></span>
 									<h3>Grace Guo</h3>
                                     <p>Grace holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
                                     <br>
@@ -244,7 +243,7 @@
                                     <p>UX Designer</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
+									<span class="icon style1 major fa-diamond"></span>
 									<h3>Zohaib Khan</h3>
 									<p>Born in California, raised in Pakistan, and having worked in Toronto, Canada, Zohaib has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
@@ -255,7 +254,7 @@
                                     </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-bar-chart"></span>
+									<span class="icon style1 major fa-diamond"></span>
 									<h3>Scott Leinweber</h3>
 									<p>Scott is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
@@ -266,7 +265,7 @@
                                     </p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-wifi"></span>
+									<span class="icon style1 major fa-diamond"></span>
 									<h3>Aroon Mathai</h3>
                                     <p>Aroon has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.</p>
                                     <br>
@@ -276,7 +275,7 @@
                                     </p>
         						</section>
 								<section>
-									<span class="icon style2 major fa-cog"></span>
+									<span class="icon style1 major fa-diamond"></span>
 									<h3>Xueting "Nika" Zhang</h3>
 									<p>Nika holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
                                     <br>
@@ -327,7 +326,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<form method="post" action="MAILTO:aroonmathai@andrew.cmu.edu?subject=Hi Team Mastercard!" enctype="text/plain">
 								<div class="field half first">
 									<label for="name">Name</label>
 									<input type="text" name="name" id="name" value="" />
