Adding individual social plugs

--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
 								<section>
 									<span class="icon style1 major"></span>
 									<h3>Grace Guo</h3>
+							<ul class="icons">
+								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
                                     <p>Grace holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
                                     <br><br><b>Post MHCI:</b><br>
                                     UX Designer</p>
@@ -244,6 +251,13 @@
 								<section>
 									<span class="icon style1 major"></span>
 									<h3>Zohaib Khan</h3>
+									<ul class="icons">
+								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 									<p>Born in California, raised in Pakistan, and having worked in Toronto, Canada, Zohaib has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
@@ -253,6 +267,13 @@
 								<section>
 									<span class="icon style1 major"></span>
 									<h3>Scott Leinweber</h3>
+									<ul class="icons">
+								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
 									<p>Scott is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br><br><b>Post MHCI:</b><br>
@@ -261,7 +282,11 @@
 								</section>
 								<section>
 									<span class="icon style1 major"></span>
-									<h3>Aroon Mathai</h3>
+									<h3><a href="http://aroonmathai.com">Aroon Mathai</a></h3>
+									<ul class="icons">
+									<li><a href="https://instagram.com/aroonmathai" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>								
+							</ul>
                                     <p>Aroon has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Manager, UX Designer</p>
@@ -269,45 +294,20 @@
 								<section>
 									<span class="icon style1 major"></span>
 									<h3>Xueting Zhang</h3>
+									<ul class="icons">
+
+									<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+
+							</ul>
 									<p>Nika holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Designer</p>
 								</section>
-								<!-- <section>
-									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-refresh"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section> -->
+								
 							</div>
 						</div>
 					</section>
