--- a/index.html
+++ b/index.html
@@ -234,23 +234,33 @@
 							<h2>About the Team</h2>
 							<p>Our team of five assembled for the 9 month MHCI Capstone project. We are all graduating in August 2018 from CMU's Master of Human-Computer Interaction program.</p>
 							<div class="items style3 small onscroll-fade-in">
-								<section>
+								<section class="align-center">
 									<span class="icon style1 major"></span>
 									<h3>Grace Guo</h3>
-							<ul class="icons">
-								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-                                    <p>Grace holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
+
+									<div class="image ">
+										<img src="images/grace_bio_pic.png" style="width:100px; height:100px;" alt="" />
+									</div>
+
+									<ul class="icons">
+										<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
+									</ul>
+
+                                    <p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Grace</a></span> holds a degree of B.S. in Business Administration from the University of Southern California, with a minor in Animation. She brings one year of experience in developing virtual reality applications and designing for three-dimensional spaces.
                                     <br><br><b>Post MHCI:</b><br>
                                     UX Designer</p>
 								</section>
-								<section>
+
+								<section  class="align-center">
 									<span class="icon style1 major"></span>
 									<h3>Zohaib Khan</h3>
+									<div class="image ">
+										<img src="images/zohaib_bio_pic.png" style="width:100px; height:100px;" alt="" />
+									</div>
 									<ul class="icons">
 								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
@@ -258,15 +268,18 @@
 								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-									<p>Born in California, raised in Pakistan, and having worked in Toronto, Canada, Zohaib has a lot of experience navigating unfamiliar territory.
+									<p class="align-left">Born in California, raised in Pakistan, and having worked in Toronto, Canada, <span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Zohaib</a></span> has a lot of experience navigating unfamiliar territory.
                                     Zohaib is now attempting to figure out how to navigate the world of interaction design, with several years of work experience in process improvement and project management consulting.
                                     He holds a BBA from the Schulich School of Business, York University, specializing in Finance and Marketing.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Manager, UX Designer</p>
 								</section>
-								<section>
+								<section  class="align-center">
 									<span class="icon style1 major"></span>
 									<h3>Scott Leinweber</h3>
+									<div class="image ">
+										<img src="images/scott_bio_pic.png" style="width:100px; height:100px;" alt="" />
+									</div>
 									<ul class="icons">
 								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon style1 fa-facebook"><span class="label">Facebook</span></a></li>
@@ -274,26 +287,36 @@
 								<li><a href="#" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-									<p>Scott is a creative technologist exploring the digital-physical dialog of craftsmanship today.
+									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br><br><b>Post MHCI:</b><br>
-                                    3D Interaction Designer, UX Designer</p>
-                                    
+                                    3D Interaction Designer, UX Designer</p>        
 								</section>
-								<section>
+								<section  class="align-center">
 									<span class="icon style1 major"></span>
 									<h3><a href="http://aroonmathai.com">Aroon Mathai</a></h3>
+									
+									<div class="image ">
+										<img src="images/aroon_bio_pic.png" style="width:100px; height:100px;" alt="" />
+									</div>
+
 									<ul class="icons">
 									<li><a href="https://instagram.com/aroonmathai" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>								
 							</ul>
-                                    <p>Aroon has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
+                                    <p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Aroon</a></span> has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Manager, UX Designer</p>
         						</section>
-								<section>
+								<section  class="align-center">
 									<span class="icon style1 major"></span>
 									<h3>Xueting Zhang</h3>
+
+									<div class="image ">
+										<img src="images/nika_bio_pic.png" style="width:100px; height:100px;" alt="" />
+									</div>
+
+
 									<ul class="icons">
 
 									<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -303,7 +326,7 @@
 								<li><a href="#" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 
 							</ul>
-									<p>Nika holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
+									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Nika</a></span> holds a B.S degree in industrial design from Georgia Institute of technology. Her interest is designing for technology to be ubiquitous yet blended in daily life. Before starting the MHCI program, she worked as a contract product designer at a startup company designing an AI based mobile app testing platform.
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Designer</p>
 								</section>
