--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
 						</div>
 					</section>
 
@@ -290,12 +290,12 @@
 									<p class="align-left"><span ><a href="http://aroonmathai" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Scott</a></span> is a creative technologist exploring the digital-physical dialog of craftsmanship today.
                                     Scott was a visiting Fulbright researcher at CITA, Danish Royal Academy during 2015-2016, and investigated how computational tools are changing traditional Danish design culture. Since 2011 he has lived in NYC consulting on computational design and digital fabrication. He holds a B.Arch from Cal Poly SLO.
                                     <br><br><b>Post MHCI:</b><br>
-                                    3D Interaction Designer, UX Designer</p>        
+                                    3D Interaction Designer, UX Designer</p>
 								</section>
 								<section  class="align-center">
 									<span class="icon style1 major"></span>
 									<h3><a href="http://aroonmathai.com">Aroon Mathai</a></h3>
-									
+
 									<div class="image ">
 										<a href="http://aroonmathai.com">
 											<img src="images/aroon_bio_pic.png" style="width:100px; height:100px;" alt="" />
@@ -304,7 +304,7 @@
 
 									<ul class="icons">
 									<li><a href="https://instagram.com/aroonmathai" class="icon style1 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>								
+								<li><a href="https://www.linkedin.com/in/aroonmathai/" class="icon style1 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
                                     <p class="align-left"><span ><a href="http://aroonmathai.com" style="color:#47D3E5; text-decoration: none; cursor: pointer;">Aroon</a></span> has a background in Computer Science and Engineering and was working as a Software Developer for Zynga, where he worked on games like Mafia Wars, FarmVille and Draw Something played by millions of people across the world. Aroon wants to integrate his interests in Technology and Design to create beautiful, accessible products.
                                     <br><br><b>Post MHCI:</b><br>
@@ -332,7 +332,7 @@
                                     <br><br><b>Post MHCI:</b><br>
                                     Product Designer</p>
 								</section>
-								
+
 							</div>
 						</div>
 					</section>
@@ -365,14 +365,14 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<ul class="icons">
+							<!-- <ul class="icons">
 								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-							<p>&copy; Team Matercard, CMU.</p>
+							</ul> -->
+							<p>&copy; Team Mastercard, CMU.</p>
 						</div>
 					</footer>
 
