adds W2 and W3 content, changes pages names, bio photos folder, favicon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
-				<!-- One -->
+				<!-- MC Splash -->
 					<section class="banner style5 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content" style="width: 60rem;">
 							<h1><b>Team Mastercard</b></h1>
@@ -30,13 +30,28 @@
 						</div>
 					</section>
 
+				<!-- One -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 1</h2>
+							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
+							<ul class="actions vertical">
+								<li><a href="week01.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
+						</div>
+					</section>
+
+
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Week 1</h2>
+							<h2>Weeknotes 2 - Kickoff</h2>
 							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
 							<ul class="actions vertical">
-								<li><a href="week1.html" class="button">Read More</a></li>
+								<li><a href="week02.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -45,6 +60,19 @@
 					</section>
 
 				<!-- Three -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 3 - Post-Kickoff - Go!</h2>
+							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
+							<ul class="actions vertical">
+								<li><a href="week02.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
+						</div>
+					</section>
+
 					<!--<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Weeknotes 2</h2>
@@ -239,7 +267,7 @@
 									<h3>Grace Guo</h3>
 
 									<div class="image ">
-										<img src="images/grace_bio_pic.png" style="width:100px; height:100px;" alt="" />
+										<img src="images/bios/grace_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 
 									<ul class="icons">
@@ -259,7 +287,7 @@
 									<span class="icon style1 major"></span>
 									<h3>Zohaib Khan</h3>
 									<div class="image ">
-										<img src="images/zohaib_bio_pic.png" style="width:100px; height:100px;" alt="" />
+										<img src="images/bios/zohaib_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 									<ul class="icons">
 								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -278,7 +306,7 @@
 									<span class="icon style1 major"></span>
 									<h3>Scott Leinweber</h3>
 									<div class="image ">
-										<img src="images/scott_bio_pic.png" style="width:100px; height:100px;" alt="" />
+										<img src="images/bios/scott_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 									<ul class="icons">
 								<li><a href="#" class="icon style1 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -298,7 +326,7 @@
 
 									<div class="image ">
 										<a href="http://aroonmathai.com">
-											<img src="images/aroon_bio_pic.png" style="width:100px; height:100px;" alt="" />
+											<img src="images/bios/aroon_bio_pic.png" style="width:100px; height:100px;" alt="" />
 										</a>
 									</div>
 
@@ -315,7 +343,7 @@
 									<h3>Xueting Zhang</h3>
 
 									<div class="image ">
-										<img src="images/nika_bio_pic.png" style="width:100px; height:100px;" alt="" />
+										<img src="images/bios/nika_bio_pic.png" style="width:100px; height:100px;" alt="" />
 									</div>
 
 
