links proper photos for w03 and w02

--- a/week02.html
+++ b/week02.html
@@ -31,11 +31,14 @@
 
 								<p>After some wheel spinning, we closed in on a group card-sorting surrounding Target Users, Problems, and Opportunities. Initially we focused on various technology solutions for authentication, like biometrics, sensor-based, 2-factor, etc. We ended up feeling these were all solutions and tools, and we needed to get the clients to help us see their priorities for who they thought their users are and the respective challenges for each.</p>
 
-								<span class="image fit"><img src="images/MC_team_roles_spreadsheet.png" alt="photo of 3 papers card sorted - Users Challenges Problems..." /></span>
+								<span class="image fit"><img src="images/w02_kickoff_discussion.jpg" alt="Kick off discussion with Bonnie and Amin" /></span>
 
 								<p>We also had a bit of fun, starting the meeting with a quick design challenge icebreaker, the Marshmallow Noodle Tower. We split into two teams and constructed noodle towers. The exercise shows the importance of quick iteration and prototyping. After the clock ran out, one team succeeded in building a 28.5” tower while the other fell over. We won’t say who won! :) </p>
 
-								<span class="image fit"><img src="images/MC_team_roles_spreadsheet.png" alt="photos of noodle tower and three Users Challenges Problems" /></span>
+								<span class="image fit"><img src="images/w02_noodle_tower.jpg" alt="photos of noodle tower" /></span>
+
+								<!-- Add photo of photo of 3 papers card sorted - Users Challenges Problems... -->
+								 <!-- Add photo of three Users Challenges Problems -->
 
 
 								<!--<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. </p>-->
