--- a/week03.html
+++ b/week03.html
@@ -44,7 +44,7 @@
 								<p>A paper from 2012 (link paper here) noted a major downside with continual authentication where the researchers found it may take up to 10 minutes of another person using the device (e.g. someone just stole your smartphone) before the system realizes the user has swapped. We plan on continuing with prototypes like this throughout the early research phase.</p>
 
 
-								<span class="image fit"><img src="images/MC_team_roles_spreadsheet.png" alt="whiteboard shots from Grace’s environmental chart and the Quadrants" /></span>
+								<span class="image fit"><img src="images/w03_researchenvironment_and_spectrums.jpg" alt="whiteboard shots from Grace’s environmental chart and the Quadrants" /></span>
 
 
 											<!--<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis volutpat lorem ipsum dolor sit amet dolor consequat.</p>-->
