jogs image placement

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 
@@ -40,22 +41,22 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
+							<img src="images/w01_team_rubric.jpg" alt="Team Rubric" />
 						</div>
 					</section>
 
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="image">
+							<img src="images/w02_noodle_tower.jpg" alt="Noodle Tower" />
+						</div>
 						<div class="content">
 							<h2>Weeknotes 2 - Kickoff</h2>
 							<p>As this is our first blog post, we wanted to describe our first steps approaching the prompt and our initial thoughts on the project. We discussed our hopes and dreams for the Capstone process and our project with Mastercard around the future of authentication and digital payments.</p>
 							<ul class="actions vertical">
 								<li><a href="week02.html" class="button">Read More</a></li>
 							</ul>
-						</div>
-						<div class="image">
-							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
 						</div>
 					</section>
 
@@ -69,7 +70,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/MC_team_roles_spreadsheet.png" alt="" />
+							<img src="images/w03_researchenvironment_and_spectrums.jpg" alt="Research Environments" />
 						</div>
 					</section>
 
